Fix contrast on paragraph

--- a/css/modules/main.less
+++ b/css/modules/main.less
@@ -1,6 +1,6 @@
 /* Author: Luciano Spilotros
  * URL: http://www.spilotros.me
- * 
+ *
  * Project Name: Luciano Spilotros - 2014 Resume Theme
  * Version: 1.0
  *
@@ -84,7 +84,7 @@ hr {
         background: #34495e;
     }
     more {
-        color: #95a5a6;
+        color: #080808;
     }
 }
 sm {
